name:               mithlond
version:            0.1.0.2
build-type:         Simple
cabal-version:      >= 1.10
synopsis:           Personal blog
description:        This is the Hakyll project for http://mithlond.ro blog.
homepage:           http://mithlond.ro
license:            PublicDomain
license-file:       LICENSE
author:             Mihai Maruseac
maintainer:         mihai.maruseac@gmail.org
copyright:          © 2017 Mihai Maruseac
category:           Web
extra-source-files: README.md

executable site
  hs-source-dirs: generator
  main-is: site.hs
  other-modules:
      Compilers
    , Compilers.Post
    , Rules
  default-language: Haskell2010
  ghc-options: -O2 -threaded -Wall -Werror -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -funbox-strict-fields -funfolding-use-threshold=16 -rtsopts=all
  build-depends:
      base
    , containers
    , hakyll
    , pandoc
    , skylighting
