name:               mithlond
version:            0.2.0.0
build-type:         Simple
cabal-version:      >= 1.10
synopsis:           Personal blog
description:        This is the Hakyll project for http://mithlond.ro blog.
homepage:           http://mithlond.ro
license:            PublicDomain
license-file:       LICENSE.md
author:             Mihai Maruseac
maintainer:         mihai.maruseac@gmail.org
copyright:          © 2022 Mihai Maruseac
category:           Web
extra-source-files: README.md

executable site
  hs-source-dirs: generator
  main-is: site.hs
  other-modules:
      Compilers
    , Compilers.Index
    , Compilers.Post
    , Patterns
    , Rules
  default-language: Haskell2010
  ghc-options: -O2 -threaded -Wall -Werror -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -funbox-strict-fields -funfolding-use-threshold=16 -rtsopts=all
  build-depends:
      base
    , containers >= 0.6.4.1 && < 0.7
    , hakyll >= 4.15.1.0 && < 4.16
    , pandoc >= 2.17.1.1 && < 2.18
    , skylighting >= 0.12.3 && < 0.13
    , text >= 1.2.4.1 && < 1.3
